--- a/rescue/.grub/grub.cfg
+++ b/rescue/.grub/grub.cfg
@@ -26,7 +26,7 @@ if [ "${next_entry}" ] ; then
    save_env next_entry
    set boot_once=true
 else
-   set default="2"
+   set default="0"
 fi
 
 if [ x"${feature_menuentry_id}" = xy ]; then
@@ -103,12 +103,12 @@ if [ "${recordfail}" = 1 ] ; then
   set timeout=30
 else
   if [ x$feature_timeout_style = xy ] ; then
-    set timeout_style=menu
-    set timeout=5
-  # Fallback normal timeout code in case the timeout_style feature is
+    set timeout_style=hidden
+    set timeout=-1
+  # Fallback hidden-timeout code in case the timeout_style feature is
   # unavailable.
-  else
-    set timeout=5
+  elif sleep --interruptible -1 ; then
+    set timeout=0
   fi
 fi
 ### END /etc/grub.d/00_header ###
@@ -147,7 +147,6 @@ else
   set linux_gfx_mode=text
 fi
 export linux_gfx_mode
-
 ### END /etc/grub.d/10_linux ###
 
 ### BEGIN /etc/grub.d/10_linux_zfs ###
@@ -164,6 +163,9 @@ export linux_gfx_mode
 ### END /etc/grub.d/30_os-prober ###
 
 ### BEGIN /etc/grub.d/30_uefi-firmware ###
+menuentry 'UEFI Firmware Settings' $menuentry_id_option 'uefi-firmware' {
+	fwsetup
+}
 ### END /etc/grub.d/30_uefi-firmware ###
 
 ### BEGIN /etc/grub.d/35_fwupd ###
@@ -174,12 +176,22 @@ export linux_gfx_mode
 # menu entries you want to add after this comment.  Be careful not to change
 # the 'exec tail' line above.
 
-menuentry "Clonezilla" {
+menuentry "Ubuntu Live" {
+	set isofile="/iso/ubuntu"
+	set gfxpayload=keep
+	loopback loop (hd0,1)$isofile
+	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile noprompt noeject
+	initrd (loop)/casper/initrd
+}
+
+menuentry "Clonezilla Live" {
 	set isofile="/iso/clonezilla"
 	loopback loop (hd0,1)$isofile
 	linux (loop)/live/vmlinuz boot=live components config findiso=$isofile ip=frommedia toram=filesystem.squashfs union=overlay username=user locales=en_US.UTF-8 keyboard-layouts=us
 	initrd (loop)/live/initrd.img
 }
+
+
 ### END /etc/grub.d/40_custom ###
 
 ### BEGIN /etc/grub.d/41_custom ###
