--- a/rescue/.grub/grub.cfg
+++ b/rescue/.grub/grub.cfg
@@ -178,16 +178,22 @@ menuentry 'UEFI Firmware Settings' $menuentry_id_option 'uefi-firmware' {
 
 menuentry "Ubuntu Live" {
 	set isofile="/iso/ubuntu"
-	set gfxpayload=keep
-	loopback loop (hd0,1)$isofile
-	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile noprompt noeject
+	loopback loop $isofile
+	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile
+	initrd (loop)/casper/initrd
+}
+
+menuentry "Ubuntu Live (to RAM)" {
+	set isofile="/iso/ubuntu"
+	loopback loop $isofile
+	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile toram
 	initrd (loop)/casper/initrd
 }
 
 menuentry "Clonezilla Live" {
 	set isofile="/iso/clonezilla"
-	loopback loop (hd0,1)$isofile
-	linux (loop)/live/vmlinuz boot=live components config findiso=$isofile ip=frommedia toram=filesystem.squashfs union=overlay username=user locales=en_US.UTF-8 keyboard-layouts=us
+	loopback loop $isofile
+	linux (loop)/live/vmlinuz boot=live findiso=$isofile locales=en_US.UTF-8 keyboard-layouts=us toram
 	initrd (loop)/live/initrd.img
 }
 
