--- a/rescue/.grub/grub.cfg
+++ b/rescue/.grub/grub.cfg
@@ -178,20 +178,26 @@ menuentry 'UEFI Firmware Settings' $menuentry_id_option 'uefi-firmware' {
 
 menuentry "Ubuntu Live" {
 	set isofile="/iso/ubuntu"
-	loopback loop $isofile
-	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile
-	initrd (loop)/casper/initrd
-}
-
-menuentry "Ubuntu Live (to RAM)" {
-	set isofile="/iso/ubuntu"
+	set uuid="000E-8092"
+	search --set=root --fs-uuid $uuid
 	loopback loop $isofile
 	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile toram
 	initrd (loop)/casper/initrd
 }
 
-menuentry "Clonezilla Live" {
+menuentry "Ubuntu Live (to RAM)" {
+	set isofile="/iso/ubuntu"
+	set uuid="000E-8092"
+	search --set=root --fs-uuid $uuid
+	loopback loop $isofile
+	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile toram
+	initrd (loop)/casper/initrd
+}
+
+menuentry "Clonezilla Live (to RAM)" {
 	set isofile="/iso/clonezilla"
+	set uuid="000E-8092"
+	search --set=root --fs-uuid $uuid
 	loopback loop $isofile
 	linux (loop)/live/vmlinuz boot=live findiso=$isofile locales=en_US.UTF-8 keyboard-layouts=us toram
 	initrd (loop)/live/initrd.img
