--- a/python/Makefile
+++ b/python/Makefile
@@ -1,3 +1,3 @@
 install:
 	apt install python3 ipython3 python3-pip -y
-	pip3 install -r requirements.txt
+	python3 -m pip install -r requirements.txt --upgrade
