--- a/makefiles/Makefile_pypi
+++ b/makefiles/Makefile_pypi
@@ -1,35 +1,39 @@
-NAME=dav-tools
+# Makefile by Davide Ponzini
 
+NAME=toypandas
+PY=python3
+
+
+prepare: test documentation
+	:
 
 install: uninstall build
-	sudo python3 -m pip install ./dist/*.whl
+	$(PY) -m pip install ./dist/*.whl
 
 build:
-	python3 -m pip install pipreqs
-	pipreqs --force
-	sudo python3 -m pip install --upgrade -r requirements.txt
 	sudo rm -rf dist/
-	python3 -m pip install build
-	python3 -m build
+	$(PY) -m build
 
 uninstall:
-	sudo python3 -m pip uninstall -y $(NAME)
+	$(PY) -m pip uninstall -y $(NAME)
 
+documentation:
+	make html -C docs/
 
-### PyPi ###
-upload: build
-	python3 -m pip install --upgrade twine
-	python3 -m twine upload --verbose dist/*
+test: install
+	pytest
+
+requirements.txt:
+	$(PY) -m pip install pipreqs
+	pipreqs --mode no-pin --force
+
+required-packages: requirements.txt
+	$(PY) -m pip install --upgrade build autoapi pytest -r requirements.txt
+
+upload: prepare
+	$(PY) -m pip install --upgrade twine
+	$(PY) -m twine upload --verbose dist/*
 
 download: uninstall
-	sudo python3 -m pip install $(NAME)
-
-
-### TestPyPi ###
-download-test: uninstall
-	python3 -m pip install --index-url https://test.pypi.org/simple/ --no-deps $(NAME)
-
-upload-test: build
-	python3 -m pip install --upgrade twine
-	python3 -m twine upload --repository testpypi dist/*
+	$(PY) -m pip install $(NAME)
 
