fix: removed toram flag from not TO RAM option

--- a/rescue/.grub/grub.cfg
+++ b/rescue/.grub/grub.cfg
@@ -181,7 +181,7 @@ menuentry "Ubuntu Live" {
 	set uuid="000E-8092"
 	search --set=root --fs-uuid $uuid
 	loopback loop $isofile
-	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile toram
+	linux (loop)/casper/vmlinuz boot=casper iso-scan/filename=$isofile
 	initrd (loop)/casper/initrd
 }
 
