--- a/conf/grub/Makefile
+++ b/conf/grub/Makefile
@@ -1,6 +1,6 @@
 setup:
 	rm -f /etc/default/grub /etc/grub.d/40_custom
-	cp .grub /etc/default/grub					# grub config
-	cp .grub_40_custom /etc/grub.d/40_custom	# custom entries
+	cp .files/grub /etc/default/grub					# grub config
+	cp .files/grub_40_custom /etc/grub.d/40_custom	# custom entries
 	sudo update-grub
 
