--- a/conf/server/Makefile
+++ b/conf/server/Makefile
@@ -1,5 +1,4 @@
 SHELL=/bin/bash
-
 VENV=../../venv
 
 ifeq ($(OS),Windows_NT)
@@ -8,28 +7,38 @@ else
         VENV_BIN=$(VENV)/bin
 endif
 
+MESSAGE=$(VENV_BIN)/python -m dav_tools.messages
 
-.PHONY:
-        echo "Please specify a target to run."
+
+.PHONY: apache apache-certbot samba ssh fail2ban
 
 apache:
-        sudo apt install apache2 mysql-server php libapache2-mod-php php-mysql phpmyadmin php-mbstring php-zip php-gd php-json php-curl -y
-        $(VENV_BIN)/python -m dav_tools.messages success "Apache configured successfully."
+	sudo apt install apache2 mysql-server php libapache2-mod-php php-mysql phpmyadmin php-mbstring php-zip php-gd php-json php-curl -y
+	$(MESSAGE) success 'Apache configured successfully.'
+
+apache-certbot:
+	sudo apt install apache2 certbot python3-certbot-apache -y
+	sudo a2enmod ssl
+	sudo systemctl restart apache2
+	sudo certbot --apache
+	$(MESSAGE) success 'Certbot configured successfully.'
+	sudo certbot renew --dry-run
+	$(MESSAGE) success 'Certbot renewal tested successfully.'
 
 samba:
-        sudo apt install -y samba
-        sudo cp .files/smb.conf /etc/samba/smb.conf
-        sudo service smbd restart
-        $(VENV_BIN)/python -m dav_tools.messages success "Samba configured successfully."
+	sudo apt install -y samba
+	sudo cp .files/smb.conf /etc/samba/smb.conf
+	sudo service smbd restart
+	$(MESSAGE) success 'Samba configured successfully.'
 
 ssh:
-        sudo apt install -y openssh-server
-        sudo cp .files/sshd_config /etc/ssh/sshd_config
-        sudo service ssh restart
-        $(VENV_BIN)/python -m dav_tools.messages success "SSH configured successfully."
+	sudo apt install -y openssh-server
+	sudo cp .files/sshd_config /etc/ssh/sshd_config
+	sudo service ssh restart
+	$(MESSAGE) success 'SSH configured successfully.'
 
 fail2ban:
-        sudo apt install -y fail2ban
-        sudo cp .files/jail.local /etc/fail2ban/jail.local
-        sudo service fail2ban restart
-        $(VENV_BIN)/python -m dav_tools.messages success "Fail2Ban configured successfully."
+	sudo apt install -y fail2ban
+	sudo cp .files/jail.local /etc/fail2ban/jail.local
+	sudo service fail2ban restart
+	$(MESSAGE) success 'Fail2Ban configured successfully.'
