--- a/conf/server/.files/smb.conf
+++ b/conf/server/.files/smb.conf
@@ -245,13 +245,13 @@
 # Custom
 [projects]
 	path = /home/dav/projects/
-	read_only = no
+	read only = no
 	browsable = yes
 	writeable = yes
 
 [anime]
 	path = /mnt/anime/
-	read_only = no
+	read only = no
 	browsable = yes
 	writeable = yes
 	read raw = yes
@@ -261,7 +261,7 @@
 
 [anime2]
 	path = /home/dav/anime/
-	read_only = no
+	read only = no
 	browsable = yes
 	writeable = yes
 	read raw = yes
