--- a/conf/server/.files/smb.conf
+++ b/conf/server/.files/smb.conf
@@ -167,6 +167,16 @@
 # public shares, not just authenticated ones
    usershare allow guests = yes
 
+
+############ Custom ############
+   security = user
+   
+   read raw = yes
+	write raw = yes
+	max xmit = 65535
+	getwd cache = yes
+
+
 #======================= Share Definitions =======================
 
 # Un-comment the following (and tweak the other settings below to suit)
@@ -248,23 +258,17 @@
 	read only = no
 	browsable = yes
 	writeable = yes
+   guest ok = no
+   valid users = dav
 
 [anime]
 	path = /mnt/anime/
 	read only = no
 	browsable = yes
 	writeable = yes
-	read raw = yes
-	write raw = yes
-	max xmit = 65535
-	getwd cache = yes
 
 [anime2]
 	path = /home/dav/anime/
 	read only = no
 	browsable = yes
 	writeable = yes
-	read raw = yes
-	write raw = yes
-	max xmit = 65535
-	getwd cache = yes
