--- a/conf/server/.files/smb.conf
+++ b/conf/server/.files/smb.conf
@@ -97,7 +97,7 @@
 
 # This option controls how unsuccessful authentication attempts are mapped
 # to anonymous connections
-   map to guest = bad user
+   map to guest = never
 
 ########## Domains ###########
 
@@ -165,7 +165,7 @@
 
 # Allow users who've been granted usershare privileges to create
 # public shares, not just authenticated ones
-   usershare allow guests = yes
+   usershare allow guests = no
 
 
 ############ Custom ############
