--- a/conf/server/.files/smb.conf
+++ b/conf/server/.files/smb.conf
@@ -266,9 +266,13 @@
 	read only = no
 	browsable = yes
 	writeable = yes
+   guest ok = no
+   valid users = dav
 
 [anime2]
 	path = /home/dav/anime/
 	read only = no
 	browsable = yes
 	writeable = yes
+   guest ok = no
+   valid users = dav
