--- a/makefiles/Makefile_astro
+++ b/makefiles/Makefile_astro
@@ -1,20 +1,27 @@
+SHELL=/bin/bash
 DIR=/var/www/html/
+SECRET=SECRET
 
 # To add submodules use in root directory:
 #	git submodule add <url> public/...
 
 .PHONY: init build copy clean
 
-init:
-	npm install
-	git submodule update --init --recursive
-
-build:
-	npx astro build
 
 copy: build
 	rm -rf $(DIR)/url
 	cp -r dist/* $(DIR)
 
+init:
+	npm install
+	git submodule update --init --recursive
+
+build: $(SECRET)
+	source $(SECRET) && npx astro build
+
+
 clean:
 	rm -rf dist
+
+$(SECRET):
+	cp SECRET.template $(SECRET)
