refactoring, added transmission

--- a/conf/apps/.files/samba/smb.conf
+++ b/conf/apps/.files/samba/smb.conf
@@ -262,7 +262,7 @@
 	valid users = dav
 
 [anime]
-	path = /mnt/anime/
+	path = /mnt/hdd1/anime/
 	read only = no
 	browsable = yes
 	writeable = yes
