--- a/conf/apps/Makefile
+++ b/conf/apps/Makefile
@@ -17,30 +17,36 @@ MESSAGE=$(VENV_BIN)/python -m dav_tools.messages
 
 apache:
 	sudo apt install apache2 mysql-server php libapache2-mod-php php-mysql phpmyadmin php-mbstring php-zip php-gd php-json php-curl -y
-	@$(MESSAGE) success 'Apache configured successfully.'
+	@$(MESSAGE) success 'Installed Apache'
+	sudo a2enmod headers
+	sudo a2enmod proxy
+	sudo a2enmod proxy_http
+	sudo cp .files/apache2/sites-available/* /etc/apache2/sites-available/
+	sudo service apache2 restart
+	@$(MESSAGE) success 'Configured reverse proxy service'
 
 apache-certbot:
 	sudo apt install apache2 certbot python3-certbot-apache -y
 	sudo a2enmod ssl
 	sudo systemctl restart apache2
 	sudo certbot --apache
-	@$(MESSAGE) success 'Certbot configured successfully.'
+	@$(MESSAGE) success 'Certbot configured successfully'
 	sudo certbot renew --dry-run
-	@$(MESSAGE) success 'Certbot renewal tested successfully.'
+	@$(MESSAGE) success 'Certbot renewal tested successfully'
 
 samba:
 	sudo apt install -y samba
 	sudo cp .files/samba/smb.conf /etc/samba/smb.conf
 	sudo service smbd restart
-	@$(MESSAGE) success 'Samba configured successfully.'
+	@$(MESSAGE) success 'Samba configured successfully'
 
 ssh:
 	sudo apt install -y openssh-server
 	sudo cp .files/ssh/sshd_config /etc/ssh/sshd_config
 	sudo service ssh restart
-	@$(MESSAGE) success 'SSH configured successfully.'
+	@$(MESSAGE) success 'SSH configured successfully'
 	ssh-import-id gh:$(USER)
-	@$(MESSAGE) success "Imported SSH keys from GitHub user $(USER)."
+	@$(MESSAGE) success "Imported SSH keys from GitHub user $(USER)"
 
 fail2ban:
 	sudo apt install -y fail2ban
@@ -51,7 +57,7 @@ fail2ban:
 postgresql:
 	sudo apt install postgresql libpq-dev -y
 	$(VENV_BIN)/python -m pip install --upgrade psycopg2
-	@$(MESSAGE) success 'Installed PostgreSQL.'
+	@$(MESSAGE) success 'Installed PostgreSQL'
 
 common:
 	sudo apt install ubuntu-restricted-extras vlc
@@ -62,4 +68,4 @@ transmission:
 	sudo cp .files/transmission-daemon/settings.json /etc/transmission-daemon/settings.json
 	sudo service transmission-daemon start
 	sudo service transmission-daemon status
-	@$(MESSAGE) success 'Transmission daemon configures successfully'
+	@$(MESSAGE) success 'Transmission daemon configured successfully'
