--- a/conf/apps/.files/transmission-daemon/settings.json
+++ b/conf/apps/.files/transmission-daemon/settings.json
@@ -50,14 +50,14 @@
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
     "rpc-host-whitelist": "",
-    "rpc-host-whitelist-enabled": true,
-    "rpc-password": "{5ece892223abcf58f3fc01b853be62c3c17d0fb5XPnjXxYh",
+    "rpc-host-whitelist-enabled": false,
+    "rpc-password": "dav",
     "rpc-port": 9091,
     "rpc-socket-mode": "0750",
     "rpc-url": "/transmission/",
-    "rpc-username": "torrent",
+    "rpc-username": "dav",
     "rpc-whitelist": "127.0.0.1,192.168.1.*",
-    "rpc-whitelist-enabled": true,
+    "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-added-enabled": false,
     "script-torrent-added-filename": "",
