--- a/conf/apps/.files/apache2/sites-available/000-default-le-ssl.conf
+++ b/conf/apps/.files/apache2/sites-available/000-default-le-ssl.conf
@@ -33,6 +33,15 @@
 	SSLCertificateKeyFile /etc/letsencrypt/live/ponzidav.com/privkey.pem
 	Include /etc/letsencrypt/options-ssl-apache.conf
 
+	ProxyPreserveHost On
+	
+	# Redirect /gpt4ct/api to localhost:5000 and strip prefix
+	ProxyPass /gpt4ct/api/ http://localhost:5000/ retry=0
+	ProxyPassReverse /gpt4ct/api/ http://localhost:5000/
+
+	# Redirect /lensql to localhost:5431 and strip prefix
+	ProxyPass /lensql/ http://localhost:5431/ retry=0
+	ProxyPassReverse /lensql/ http://localhost:5431/
 
 	
 </VirtualHost>
