--- a/conf/apps/.files/apache2/sites-available/000-default-le-ssl.conf
+++ b/conf/apps/.files/apache2/sites-available/000-default-le-ssl.conf
@@ -40,8 +40,8 @@
 	ProxyPassReverse /gpt4ct/api/ http://localhost:5000/
 
 	# Redirect /lensql to localhost:5431 and strip prefix
-	ProxyPass /lensql http://localhost:5431/ retry=0
-	ProxyPassReverse /lensql http://localhost:5431/
+	ProxyPass /lensql/api http://localhost:5431/ retry=0
+	ProxyPassReverse /lensql/api http://localhost:5431/
 
 	
 </VirtualHost>
