--- a/conf/apps/.files/samba/smb.conf
+++ b/conf/apps/.files/samba/smb.conf
@@ -261,8 +261,16 @@
 	guest ok = no
 	valid users = dav
 
-[anime]
+[anime1]
 	path = /mnt/hdd1/anime/
+	read only = no
+	browsable = yes
+	writeable = yes
+	guest ok = no
+	valid users = dav
+
+[anime2]
+	path = /mnt/hdd2/anime/
 	read only = no
 	browsable = yes
 	writeable = yes
